--- a/css_main.css
+++ b/css_main.css
@@ -36,6 +36,7 @@
   height: 4.5%;
 }
 #navbar2-div {
+
   height: 100%; 
   padding: 0px;
   margin: 0px;
@@ -44,15 +45,17 @@
   border: #000; 
   border-top: 0px ; 
   border-style: solid;
+  
 }
 
-.navbaritems {
+#navbar-items {
   height: 100%;
   padding: 0px;
   margin: 0px;
 
-  align-content: center;
-  align-items: center;
+  
+  align-content: center!important;
+  align-items: center!important;
   justify-content: center;
 }
 
